# auth-dash-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  pyproject.toml  setup.cfg
src/: AzureDataExample.py  DashApp.py  ExampleDashApp1.py  ExampleDashApp2.py  auth.py
templates/: access_denied.html  index.html  login.html  menu.html
